Nearly finished coding the notes component, added a new section to the home page, and finished out some bookkeeping work on the gallery page

--- a/public/styles/foundation/_fonts.scss
+++ b/public/styles/foundation/_fonts.scss
@@ -9,7 +9,7 @@
  *
  * Comfortaa (for special text)
  * Poppins (for inputs)
- * Raleway (for link text)
+ * Raleway (for link text and charting)
  * Roboto Mono (for data)
  * Avenir 85 Heavy (for general text)
  * Avenir 35 Light (for general text)
