--- a/public/styles/page/dashboard.module.scss
+++ b/public/styles/page/dashboard.module.scss
@@ -27,7 +27,7 @@
 }
 
 .dashboard-bubble {
-	@include fonts.define-font();
+	@include common.fonts-define-font();
 
 	border: {
 		width: 0.5px;
@@ -47,9 +47,9 @@
 
 	width: 20%;
 	position: relative;
-	box-shadow: 1px 1px 7px colors.$low-black;
+	box-shadow: 1px 1px 7px common.$colors-low-black;
 	text-align: center;
-	background-color: colors.$white;
+	background-color: common.$colors-white;
 }
 
 .dashboard-bubble-body {
@@ -57,10 +57,10 @@
 }
 
 .dashboard-bubble-customer-name {
-	@include fonts.define-font($family: Avenir Heavy);
+	@include common.fonts-define-font($family: Avenir Heavy);
 
 	padding: 10px;
-	background-color: colors.$silver;
+	background-color: common.$colors-silver;
 }
 
 .dashboard-bubble-company-text {
@@ -82,10 +82,10 @@
 }
 
 .dashboard-bubble-task {
-	@include fonts.define-font($size: fonts.$secondary);
+	@include common.fonts-define-font($size: common.$fonts-secondary);
 
 	padding: 5px;
-	background-color: colors.$silver;
+	background-color: common.$colors-silver;
 }
 
 .dashboard-bubble-navigator {
@@ -98,8 +98,8 @@
 	padding: 8px;
 	position: absolute;
 	transform: translate(-50%, -50%);
-	background-color: colors.$steel-blue;
-	color: colors.$white;
+	background-color: common.$colors-steel-blue;
+	color: common.$colors-white;
 	width: 35px;
 	top: 5px;
 	left: 95%;
@@ -107,7 +107,7 @@
 }
 
 .dashboard-bubble-due-date {
-	@include fonts.define-font($size: fonts.$secondary);
+	@include common.fonts-define-font($size: common.$fonts-secondary);
 
 	border: {
 		radius: 50%;
@@ -119,8 +119,8 @@
 	padding: 12px;
 	transform:translate(-50%, -50%);
 	width: 35px;
-	background-color: colors.$white;
-	color: colors.$black;
+	background-color: common.$colors-white;
+	color: common.$colors-black;
 	position: absolute;
 	top: 0;
 	left: 95%;
