--- a/public/styles/page/components.module.scss
+++ b/public/styles/page/components.module.scss
@@ -86,6 +86,30 @@
 	}
 }
 
+@include common.animations-keyframes($name: modal-fade-in) {
+	0% {
+		opacity: 0.0;
+		transform: translate(-50%, -70%);
+	}
+
+	100% {
+		opacity: 1.0;
+		transform: translate(-50%, -50%);
+	}
+}
+
+@include common.animations-keyframes($name: modal-fade-out) {
+	0% {
+		opacity: 1.0;
+		transform: translate(-50%, -50%);
+	}
+
+	100% {
+		opacity: 0.0;
+		transform: translate(-50%, -30%);
+	}
+}
+
 /* ----------------------- TOAST ----------------------------- */
 
 .custom-error-toast {
@@ -312,7 +336,6 @@
 	top: 0;
 	left: 0;
 	z-index: 4000;
-	display: block;
 	background-color: rgba(0 0 0 / 0%);
 	opacity: 0.0;
 }
@@ -599,7 +622,7 @@
 /* ----------------------- MODALS ----------------------------- */
 
 .modal-overlay {
-	@include common.animations-transition-settings($property: background-color, $duration: 0.5s);
+	@include common.animations-transition-settings($property: all, $duration: 0.5s);
 
 	position: fixed;
 	width: 100%;
@@ -608,10 +631,12 @@
 	left: 0;
 	z-index: 200;
 	background-color: rgba(0 0 0 / 0%);
+	overlay: 0.0;
 }
 
 .modal-overlay-show {
 	background-color: rgba(0 0 0 / 80%);
+	opacity: 1.0;
 }
 
 .modal {
@@ -629,6 +654,16 @@
 	opacity: 0.0;
 	top: 45%;
 	left: 50%;
+}
+
+.modal-shift {
+	&-down-in {
+		@include common.animations-animation-settings($keyframeSet: modal-fade-in, $duration: 0.25s, $timing: ease, $persist: true);
+	}
+
+	&-down-out {
+		@include common.animations-animation-settings($keyframeSet: modal-fade-out, $duration: 0.25s, $timing: ease, $persist: true);
+	}
 }
 
 .modal-body {
