--- a/public/styles/foundation/global.scss
+++ b/public/styles/foundation/global.scss
@@ -3,10 +3,14 @@
 body {
 	margin: {
 		top: 0;
-		bottom: 100px;
+		bottom: 0;
 		left: 0;
 		right: 0;
 	}
 
 	background-color: #EEEFF1;
+}
+
+p {
+	margin: 0;
 }
