--- a/public/styles/page/headerFooter.module.scss
+++ b/public/styles/page/headerFooter.module.scss
@@ -175,9 +175,8 @@
 	width: 100%;
 
 	@include common.responsive-desktop-only() {
-		opacity: 0.75;
 		height: 50px;
-		background-color: common.$colors-black;
+		background-color: rgba(0 0 0 / 75%);
 	}
 
 	@include common.responsive-mobile-only() {
