Nearly wrapped up the payment widget. Also did some clean-up work here and there.

--- a/public/styles/foundation/_colors.scss
+++ b/public/styles/foundation/_colors.scss
@@ -8,6 +8,7 @@ $indian-red: #CD5C5C;
 $pale-violet-red: #DB7093;
 $negative-red: #DB5192;
 $light-coral: #F08080;
+$light-salmon: #FFA07A;
 
 $amber: #A8B633;
 $light-yellow: #EEF3C2;
