--- a/public/styles/page/lib/_form.scss
+++ b/public/styles/page/lib/_form.scss
@@ -52,7 +52,7 @@
  */
 @mixin small-button($bgColor: common.$colors-indian-red, $width: 100%) {
 	@include common.animations-transition-settings($property: all, $duration: 0.25s);
-	@include common.fonts-define-font($family: Roboto Mono);
+	@include common.fonts-define-font($family: Poppins);
 
 	border: {
 		width: 1px;
